samples/_failures_safe/1761557324_26623e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_80758ebb.c: In function ‘next_token’:
./samples/SAFE/__tmp_80758ebb.c:167: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_80758ebb.c:166:5: error: expected declaration or statement at end of input
  166 |     if
      |     ^~
